Create Styling with CSS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere quos reiciendis ipsam fuga voluptate asperiores odio distinctio ducimus, recusandae quas nobis consequatur saepe explicabo voluptas consectetur! Perspiciatis, impedit expedita.
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis unde voluptate reiciendis iusto praesentium suscipit. Ea, dignissimos officiis, maxime recusandae error quae, at facere cumque corporis harum ipsum eaque ducimus.
     </p>
-    <img src="assets/logo html dan css.jpg" alt="logo html dan css">
+    <img src="assets/logo html dan css.jpg" alt="logo html dan css" style="width: 20%">
 
     
     <p>
