--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Hactiv8 - HTML & CSS</title>
 </head>
 <body>
     <h1>Blog Post</h1>
     <h2>Post Pertama</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est recusandae veritatis expedita eos quo, a sunt voluptate sit hic! Sunt aspernatur consectetur, ipsa doloremque ex fugit iusto harum nobis veritatis!
+    <p class="main-text">Lorem ipsum dolor sit amet <strong>consectetur adipisicing elit.</strong> Est recusandae veritatis expedita eos quo, a sunt voluptate sit hic! Sunt aspernatur consectetur, ipsa doloremque ex fugit iusto harum nobis veritatis!
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere quos reiciendis ipsam fuga voluptate asperiores odio distinctio ducimus, recusandae quas nobis consequatur saepe explicabo voluptas consectetur! Perspiciatis, impedit expedita.
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis unde voluptate reiciendis iusto praesentium suscipit. Ea, dignissimos officiis, maxime recusandae error quae, at facere cumque corporis harum ipsum eaque ducimus.
     </p>
-    <img src="assets/logo html dan css.jpg" alt="logo html dan css" style="width: 20%">
+    <img src="assets/logo html dan css.jpg" alt="logo html dan css">
 
     
     <p>
         <img src="assets/A11.2020.12884.jpg" alt="author">
     </p>
-    <p>
+    <p class="author-text">
         Lailatul Fitriyah
     </p>
     <a href="singlepost.html">Contoh Link</a>
