--- a/index.html
+++ b/index.html
@@ -1,62 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Hactiv8 - HTML & CSS</title>
 </head>
+
 <body>
-    <h1>Blog Post</h1>
-    <h2>Post Pertama</h2>
-    <p class="main-text">Lorem ipsum dolor sit amet <strong>consectetur adipisicing elit.</strong> Est recusandae veritatis expedita eos quo, a sunt voluptate sit hic! Sunt aspernatur consectetur, ipsa doloremque ex fugit iusto harum nobis veritatis!
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam facere quos reiciendis ipsam fuga voluptate asperiores odio distinctio ducimus, recusandae quas nobis consequatur saepe explicabo voluptas consectetur! Perspiciatis, impedit expedita.
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis unde voluptate reiciendis iusto praesentium suscipit. Ea, dignissimos officiis, maxime recusandae error quae, at facere cumque corporis harum ipsum eaque ducimus.
-    </p>
-    <img src="assets/logo html dan css.jpg" alt="logo html dan css">
+    <div class="container">
+        <div class="blog-post">
+            <h1>Blog Post</h1>
+            <h2>Post Pertama</h2>
+            <p class="date">19 Agustur 2022</p>
+            <p class="main-text">
+                Lorem ipsum dolor sit amet
+                <strong>consectetur adipisicing elit.</strong> Est recusandae
+                veritatis expedita eos quo, a sunt voluptate sit hic! Sunt aspernatur
+                consectetur, ipsa doloremque ex fugit iusto harum nobis veritatis!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+                facere quos reiciendis ipsam fuga voluptate asperiores odio distinctio
+                ducimus, recusandae quas nobis consequatur saepe explicabo voluptas
+                consectetur! Perspiciatis, impedit expedita. Lorem, ipsum dolor sit
+                amet consectetur adipisicing elit. Veritatis unde voluptate reiciendis
+                iusto praesentium suscipit. Ea, dignissimos officiis, maxime
+                recusandae error quae, at facere cumque corporis harum ipsum eaque
+                ducimus.
+            </p>
+            <img src="assets/logo html dan css.jpg" alt="logo html dan css" />
 
-    
-    <p>
-        <img src="assets/A11.2020.12884.jpg" alt="author">
-    </p>
-    <p class="author-text">
-        Lailatul Fitriyah
-    </p>
-    <a href="singlepost.html">Contoh Link</a>
+            <p>
+                <img src="assets/A11.2020.12884.jpg" alt="author" />
+            </p>
+            <p class="author-text">Lailatul Fitriyah</p>
+            <a href="singlepost.html">Contoh Link</a>
 
-    <form action="">
-        <fieldset>
-            <legend>Form</legend>
-            <label for="email">Email : </label>
-            <input type="text" id="email" name="email">
-            <br>
+            <form action="">
+                <fieldset>
+                    <legend>Form</legend>
+                    <label for="email">Email : </label>
+                    <input type="text" id="email" name="email" />
+                    <br />
 
-            <label for="nama">Nama : </label>
-            <input type="text" id="nama" name="nama">
-            <br>
-            <label for="jk">Jenis Kelamin : </label>
-            <input type="radio" id="jk" name="jk" value="laki-laki">Laki-laki
-            <input type="radio" id="jk" name="jk" value="perempuan">Perempuan
-            <br>
-            <label for="materi">Materi : </label>
-            <select name="materi" id="materi">
-                <option value="html">HTML</option>
-                <option value="css">CSS</option>
-                <option value="javascript">Javascript</option>
-                <option value="php">PHP</option>
-                <option value="mysql">MySQL</option>
-            </select>
-            <br>
-            <!-- pesan -->
-            <label for="pesan">Pesan : </label>
-            <textarea name="pesan" id="pesan" cols="30" rows="10"></textarea>
-            <br>
-            <input type="checkbox"> <label for="checklist">Apakah mau berlangganan ? </label>
-            <br>
-            <button type="submit">Kirim</button>
-        </fieldset>
-    </form>
-    
+                    <label for="nama">Nama : </label>
+                    <input type="text" id="nama" name="nama" />
+                    <br />
+                    <label for="jk">Jenis Kelamin : </label>
+                    <input type="radio" id="jk" name="jk" value="laki-laki" />Laki-laki
+                    <input type="radio" id="jk" name="jk" value="perempuan" />Perempuan
+                    <br />
+                    <label for="materi">Materi : </label>
+                    <select name="materi" id="materi">
+                        <option value="html">HTML</option>
+                        <option value="css">CSS</option>
+                        <option value="javascript">Javascript</option>
+                        <option value="php">PHP</option>
+                        <option value="mysql">MySQL</option>
+                    </select>
+                    <br />
+                    <!-- pesan -->
+                    <label for="pesan">Pesan : </label>
+                    <textarea name="pesan" id="pesan" cols="30" rows="10"></textarea>
+                    <br />
+                    <input type="checkbox" />
+                    <label for="checklist">Apakah mau berlangganan ? </label>
+                    <br />
+                    <button type="submit">Kirim</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
