--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
                 ducimus.
             </p>
             <img src="assets/logo html dan css.jpg" alt="logo html dan css" />
+        </div>
 
+        <div class="other-post">
+            Dummy
+        </div>
+
+        
+        <div class="clearfix"></div>
+        <div class="author-box">
             <p>
                 <img src="assets/A11.2020.12884.jpg" alt="author" />
             </p>
@@ -43,7 +51,7 @@
                     <label for="email">Email : </label>
                     <input type="text" id="email" name="email" />
                     <br />
-
+    
                     <label for="nama">Nama : </label>
                     <input type="text" id="nama" name="nama" />
                     <br />
@@ -71,6 +79,7 @@
                 </fieldset>
             </form>
         </div>
+
     </div>
 </body>
 
